# bugsat-firmware

./: .gitignore  README.md
ESP32/BaseStationFirmware/: platformio.ini
ESP32/BaseStationFirmware/src/: STATIC_CONFIG.h  debug.h  device_status.cpp  device_status.h  display_handler.cpp  display_handler.h  lora_handler.cpp  lora_handler.h  main.cpp  task_monitoring.cpp  task_monitoring.h  upload_handler.cpp  upload_handler.h  wifi_handler.cpp  wifi_handler.h
STM32/: .cproject  .mxproject  .project  CMakeLists.txt  STM32.ioc  STM32L496RGTX_FLASH.ld  stm32l496rgt6-cansat.cfg
STM32/Core/Inc/: BMP390.h  FreeRTOSConfig.h  battery_voltage.h  bug_deployment.h  bugpack_data_manager.h  data_send_handler.h  debug_printf.h  device_config.h  fatfs_sd_card.h  gps_driver.h  indicator_utils.h  lis3dh_driver.h  lis3dh_reg.h  lora_handler.h  main.h  sd_card_handler.h  sensors_handler.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  uart_nrf52.h
STM32/Core/Src/: BMP390.c  SX1278_hw.c  battery_voltage.c  bug_deployment.c  freertos.c  (+15 more)
nRF52/.west/: config
nRF52/app/: CMakeLists.txt  prj.conf  west.yml
nRF52/app/boards/arm/cansat-ble/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  cansat-ble.dts  cansat-ble.yaml  cansat-ble_defconfig
nRF52/app/src/: main.c
nRF52/app/src/components/bluetooth/: bluetooth_core.c  bluetooth_core.h  bugpack_ingest_service.c  bugpack_ingest_service.h  bugsat_status_service.c  bugsat_status_service.h  lora_configuration_service.c  lora_configuration_service.h  misc_service.c  misc_service.h
nRF52/app/src/components/uart/: uart_stm.c  uart_stm.h
